Added an arrow node to velocity sensor
Initial version of fluid pressure and flow sim