@@ -1,2 +1,3 @@
+Added labels and tick marks to density slider
 Added an arrow node to velocity sensor
 Initial version of fluid pressure and flow sim
